--- a/InveonCase/index.html
+++ b/InveonCase/index.html
@@ -48,7 +48,7 @@
 <script>
     $(document).ready(function () {
         items();
-        createArray();
+        createSelector();
     });
     $(".third").click(function () {
         $(".item").css({ "width": "25%", "margin": "30px" });
