--- a/InveonCase/index.html
+++ b/InveonCase/index.html
@@ -42,6 +42,13 @@
         <section class="sec2">
         </section>
     </div>
+    <div class="pagination">
+        <a class="pagination-item active" href="#">1</a>
+        <a class="pagination-item " href="#">1</a>
+        <a class="pagination-item " href="#">1</a>
+        <a class="pagination-item " href="#">1</a>
+        <a class="pagination-item " href="#">1</a>
+    </div>
 </body>
 
 </html>
