--- a/InveonCase/index.html
+++ b/InveonCase/index.html
@@ -43,7 +43,7 @@
             <section class="sec2">
             </section>
         </div>
-        <div class="pagg">
+        <div>
             <div class="pagination">
                 <ul>
                     <li><a href="#">&laquo;</a></li>
